# n8n_nginx

./: .env.example  .filebrowser.json  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENT_PLAN.md  LICENSE  README.md  README20.md  SYSTEM_NOTIFICATIONS_PLAN.md  cloudflare.ini.example  docker-compose.yaml  docker-compose1.yaml  filebrowser.json  init-db.sh  install.sh  interactive.md  nginx-public.conf  nginx-router.conf  nginx.conf  nginx.conf.example  ntfy.txt  package-lock.json  package.json  public.index.html.example  public_index.html  screen_capture.md  setup-config.example  setup.sh  tailscale-serve.json  tailscale-serve.json.example  update_public_index.sh
management/: Dockerfile  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  supervisord.conf
management/api/: __init__.py  config.py  database.py  dependencies.py  main.py  security.py
management/api/data/: ntfy_emojis.py
management/api/models/: __init__.py  audit.py  auth.py  backups.py  email.py  notifications.py  ntfy.py  settings.py  system_notifications.py
management/api/routers/: __init__.py  auth.py  backups.py  cache.py  containers.py  email.py  env_config.py  flows.py  notifications.py  ntfy.py  settings.py  system.py  system_notifications.py  terminal.py
management/api/schemas/: __init__.py  auth.py  backups.py  common.py  email.py  notifications.py  ntfy.py  settings.py  system_notifications.py
management/api/services/: __init__.py  auth_service.py  backup_service.py  container_service.py  email_service.py  metrics_monitoring_service.py  n8n_api_service.py  notification_service.py  ntfy_service.py  pruning_service.py  redis_cache_service.py  restore_service.py  verification_service.py
management/api/tasks/: __init__.py  scheduler.py
management/frontend/: .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
management/frontend/src/: App.vue  main.js
management/frontend/src/router/: index.js
management/frontend/src/services/: api.js
management/frontend/src/stores/: auth.js  backups.js  containers.js  debug.js  notifications.js  theme.js
management/frontend/src/utils/: formatters.js
management/frontend/src/views/: ApiDebugView.vue  BackupSettingsView.vue  BackupsView.vue  ContainersView.vue  DashboardView.vue  FileBrowserView.vue  FlowsView.vue  LoginView.vue  NtfyView.vue  (+3 more)
management/scripts/: nfs_health.sh
management/static/: index.html
management/templates/: index.html
(+125 files in other folders)
